[UPDATE] Update to order step
